--- a/data/about.html
+++ b/data/about.html
@@ -1,14 +1,11 @@
-// about.html file in raw data format for PROGMEM
-//
-const char about_html[] PROGMEM = R"=====(
 <!DOCTYPE html>
 <html>
  <head>
   <title>About Smartmeter P1</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="smartmeter.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="style.css">
  </head>
  <body>
   <ul>
@@ -22,11 +19,10 @@ const char about_html[] PROGMEM = R"=====(
    <h1>** Smartmeter P1 **</h1>
   <p>Uitlezen van de Vlaamse "slimme energiemeter" via de P1-poort.<br>
 	<p>Auteur: Koenraad Lelong<br>
-	Datum : mei 2020</p>
+	Datum : juli 2021</p>
   Gebaseerd op verschillende idee&euml;n op Github :<br>
    <a href="https://github.com/neographikal/P1-Meter-ESP8266-MQTT" target="_blank" name="neographical" title="title">neographical</a><br>
   en anderen<br>
   </center>
  </body>
 </html>
-)=====" ;
