--- a/data/index.html
+++ b/data/index.html
@@ -1,13 +1,10 @@
-// index.html file in raw data format for PROGMEM
-//
-const char index_html[] PROGMEM = R"=====(
 <!DOCTYPE html>
 <html>
  <head>
   <title>Smartmeter P1</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" type="text/css" href="smartmeter.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
  </head>
  <body>
@@ -132,7 +129,6 @@ const char index_html[] PROGMEM = R"=====(
  </body>
 </html>
 <noscript>
-  <link rel="stylesheet" href="smartmeter.css">
+  <link rel="stylesheet" href="style.css">
   Sorry, Smartmeter P1 does not work without JavaScript!
 </noscript>
-)=====" ;
