--- a/data/setup.html
+++ b/data/setup.html
@@ -1,13 +1,10 @@
-// config.html file in raw data format for PROGMEM
-//
-const char config_html[] PROGMEM = R"=====(
 <!DOCTYPE html>
 <html>
  <head>
   <title>Smartmeter P1 config</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" type="text/css" href="smartmeter.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
  </head>
  <body>
@@ -234,4 +231,3 @@ const char config_html[] PROGMEM = R"=====(
    </script>
   </body>
 </html>
-)=====" ;
