--- a/data/about.html
+++ b/data/about.html
@@ -3,26 +3,31 @@
  <head>
   <title>About Smartmeter P1</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="Shortcut Icon" type="image/png" href="favicon.png">
  </head>
  <body>
-  <ul>
-   <li><a class="pull-left" href="#">Smartmeter P1</a></li>
-   <li><a class="pull-left" href="/index.html">Data</a></li>
-   <li><a class="pull-left" href="/setup.html">Setup</a></li>
-   <li><a class="pull-left active" href="/about.html">Over</a></li>
-  </ul>
-  <br><br><br>
-  <center>
-   <h1>** Smartmeter P1 **</h1>
+  <div class="topnav" id="myTopnav">
+    <a href="#" class="disabled">Energy Display</a>
+     <div class="topnav-right">
+         <a href="index.html">Data</a>
+         <a href="setup.html">Instellen</a>
+         <a href="about.html">Over</a>
+     </div>
+     <a href="javascript:void(0);" class="icon" onclick="handleNavBar()">
+       <i class="fa fa-bars"></i>
+     </a>
+   </div>
+   <div class="content";>
+    <h1>** Smartmeter P1 **</h1>
   <p>Uitlezen van de Vlaamse "slimme energiemeter" via de P1-poort.<br>
 	<p>Auteur: Koenraad Lelong<br>
 	Datum : juli 2021</p>
   Gebaseerd op verschillende idee&euml;n op Github :<br>
    <a href="https://github.com/neographikal/P1-Meter-ESP8266-MQTT" target="_blank" name="neographical" title="title">neographical</a><br>
   en anderen<br>
-  </center>
+   </div>
  </body>
 </html>
