--- a/data/index.html
+++ b/data/index.html
@@ -138,3 +138,4 @@
   <link rel="stylesheet" href="style.css">
   Sorry, Smartmeter P1 does not work without JavaScript!
 </noscript>
+<script src="script.js"></script>
