--- a/data/update.html
+++ b/data/update.html
@@ -4,26 +4,33 @@
   <title>Smartmeter P1 config</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
+  <link rel="Shortcut Icon" type="image/png" href="favicon.png">
  </head>
  <body>
-  <ul>
-   <li><a class="pull-left" href="#">Smartmeter P1</a></li>
-   <li><a class="pull-left" href="/index.html">Data</a></li>
-   <li><a class="pull-left" href="/setup.html">Setup</a></li>
-   <li><a class="pull-left" href="/about.html">Over</a></li>
-  </ul>
-  <br><br><br>
-  <center>
-   <h1>** Smartmeter P1 **</h1>
-   <p>Kies het firmware-bestand...<br><i>Na een succesvolle upload zal het apparaat opnieuw opstarten.</i>
-   </p>
-    <div class="config">
-    </div>
- <form method='POST' action='/upload' enctype='multipart/form-data'>
- <input type='file' name='update'><br>
- <input class="button buttonr" type='submit' value='Update'>
- </form>
+   <div class="topnav" id="myTopnav">
+      <a href="#" class="disabled">Energy Display</a>
+       <div class="topnav-right">
+           <a href="index.html">Data</a>
+           <a href="setup.html">Instellen</a>
+           <a href="about.html">Over</a>
+       </div>
+       <a href="javascript:void(0);" class="icon" onclick="handleNavBar()">
+         <i class="fa fa-bars"></i>
+       </a>
+     </div>
+   <div class="content">
+      <h1>** Smartmeter P1 **</h1>
+      <p>Kies het firmware-bestand...<br><i>Na een succesvolle upload zal het apparaat opnieuw opstarten.</i>
+      </p>
+       <div class="config">
+       </div>
+    <form method='POST' action='/upload' enctype='multipart/form-data'>
+    <input type='file' name='update'><br>
+    <input class="button buttonr" type='submit' value='Update'>
+    </form>   
+   </div>
  </body>
 </html>
+<script src="script.js"></script>
