--- a/data/setup.html
+++ b/data/setup.html
@@ -9,7 +9,7 @@
  </head>
  <body>
   <div class="topnav" id="myTopnav">
-    <a href="#" class="disabled">Energy Display</a>
+    <a href="#" class="disabled">Smartmeter P1</a>
      <div class="topnav-right">
          <a href="index.html">Data</a>
          <a href="setup.html">Instellen</a>
@@ -20,8 +20,8 @@
      </a>
    </div>
    <div class="content">
-   <h1>** Smartmeter P1 **</h1>
-   <p>U kan de configuratie hier aanpassen.<br> <i>Bedenk wel dat de aanpassingen maar effectief zijn na het herstarten van het apparaat.</i>
+   <h1>Smartmeter P1</h1>
+   <p>U kan de configuratie hier aanpassen.<br> <i>Let er wel op dat de aanpassingen maar effectief zijn na het herstarten van het apparaat.</i>
    </p>
     <div class="config">
     <table style="width:600px">
