--- a/data/update.html
+++ b/data/update.html
@@ -10,7 +10,7 @@
  </head>
  <body>
    <div class="topnav" id="myTopnav">
-      <a href="#" class="disabled">Energy Display</a>
+      <a href="#" class="disabled">Smartmeter P1</a>
        <div class="topnav-right">
            <a href="index.html">Data</a>
            <a href="setup.html">Instellen</a>
@@ -21,7 +21,7 @@
        </a>
      </div>
    <div class="content">
-      <h1>** Smartmeter P1 **</h1>
+      <h1>Smartmeter P1</h1>
       <p>Kies het firmware-bestand...<br><i>Na een succesvolle upload zal het apparaat opnieuw opstarten.</i>
       </p>
        <div class="config">
