--- a/data/index.html
+++ b/data/index.html
@@ -10,7 +10,7 @@
  </head>
  <body>
   <div class="topnav" id="myTopnav">
-    <a href="#" class="disabled">Energy Display</a>
+    <a href="#" class="disabled">Smartmeter P1</a>
      <div class="topnav-right">
          <a href="index.html">Data</a>
          <a href="setup.html">Instellen</a>
@@ -22,7 +22,7 @@
    </div>
    <div class="content";>
 
-    <h1>** Smartmeter P1 **</h1>
+    <h1>Smartmeter P1</h1>
     <label><big>Versie : </big></label>
     <input class="Version" type="text" size="4" id="Version" placeholder="Versie" readonly>
     <br>
