changes in stylesheet

--- a/data/index.html
+++ b/data/index.html
@@ -30,7 +30,8 @@
     <input class="Version" type="text" size="4" id="rssi" placeholder="WiFi signaal" readonly>
     <br><br>
     <div style="overflow-x:auto;">
-    <table style="width:600px">
+      <center>
+    <table  style="width:600px">
      <tr>
       <td><center>
        <label for="HA"><big>Energie verbruik tarief 1: </big></label>
@@ -75,7 +76,8 @@
       </td>
      </tr>
     </table>
-    </div>
+  </center>
+</div>
     </div>
    <script>
    function httpGet ( theReq )
