--- a/data/login.html
+++ b/data/login.html
@@ -10,7 +10,7 @@ margin: auto;
 .form {
 position: relative;
 z-index: 1;
-background: #FFFFFF;
+background: #000000;
 max-width: 360px;
 margin: 0 auto 100px;
 padding: 45px;
@@ -32,7 +32,7 @@ font-size: 14px;
 font-family: sans-serif;
 text-transform: uppercase;
 outline: 0;
-background: #4CAF50;
+background: #ff0000;
 width: 100%;
 border: 0;
 padding: 15px;
@@ -43,7 +43,7 @@ transition: all 0.3 ease;
 cursor: pointer;
 }
 .form button:hover, .form button:active, .form button:focus {
-background: #43A047;
+background: #cc0000;
 }
 .form .message {
 margin: 15px 0 0;
@@ -91,11 +91,7 @@ text-decoration: none;
 color: #EF3B3A;
 }
 body {
-background: #76b852; /* fallback for old browsers */
-background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-background: -moz-linear-gradient(right, #76b852, #8DC26F);
-background: -o-linear-gradient(right, #76b852, #8DC26F);
-background: linear-gradient(to left, #76b852, #8DC26F);
+background: #ffffff; /* fallback for old browsers */
 font-family: sans-serif;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
