Setup table centered

--- a/data/setup.html
+++ b/data/setup.html
@@ -24,8 +24,8 @@
    <p>U kan de configuratie hier aanpassen.<br> <i>Let er wel op dat de aanpassingen maar effectief zijn na het herstarten van het apparaat.</i>
    </p>
     <div class="config">
-    <table style="width:600px">
-    
+      <center>
+        <table style="width:600px">
 <tr>
   <td class="config">
       <label><big>Hostnaam : </big></label>
@@ -110,6 +110,7 @@
   </td>
 </tr>
 </table>
+</center>
 </div>
 </div> 
 <br><input class="config" type="text" id="resultstr" placeholder="Waiting for input...." readonly>
