--- a/data/setup.html
+++ b/data/setup.html
@@ -4,8 +4,9 @@
   <title>Smartmeter P1 config</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="Shortcut Icon" type="image/ico" href="favicon.ico">
+  <link rel="Shortcut Icon" type="image/png" href="favicon.png">
  </head>
  <body>
   <div class="topnav" id="myTopnav">
