--- a/data/index.html
+++ b/data/index.html
@@ -21,7 +21,6 @@
      </a>
    </div>
    <div class="content";>
-
     <h1>Smartmeter P1</h1>
     <label><big>Versie : </big></label>
     <input class="Version" type="text" size="4" id="Version" placeholder="Versie" readonly>
@@ -29,54 +28,43 @@
     <label>WiFi signaal : </label>
     <input class="Version" type="text" size="4" id="rssi" placeholder="WiFi signaal" readonly>
     <br><br>
-    <div style="overflow-x:auto;">
-      <center>
-    <table  style="width:600px">
-     <tr>
-      <td><center>
+    <div class="card-grid">
+		<div class="card">
        <label for="HA"><big>Energie verbruik tarief 1: </big></label>
        <br>
        <input type="text" size="10" id="ConsDay" placeholder="cons tarief 1..." readonly> Wh
-      </td>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="HF"><big>Energie verbruik tarief 2: </big></label>
        <br>
        <input type="text" size="10" id="ConsNight" placeholder="cons tarief 2..." readonly> Wh
-      </center></td>
-     </tr>
-     <tr>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="LA"><big>Energie productie tarief 1: </big></label>
        <br>
        <input type="text" size="10" id="ProdDay" placeholder="prod tarief 1..." readonly> Wh
-      </td>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="LF"><big>Energie productie tarief 2: </big></label>
        <br>
        <input type="text" size="10" id="ProdNight" placeholder="prod tarief 2..." readonly> Wh
-      </center></td>
-     </tr>
-     <tr>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="LA"><big>Energie verbruik nu: </big></label>
        <br>
        <input type="text" size="10" id="ConsNow" placeholder="cons nu..." readonly> W
-      </td>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="LF"><big>Energie productie nu: </big></label>
        <br>
        <input type="text" size="10" id="ProdNow" placeholder="prod nu..." readonly> W
-      </center></td>
-     </tr>
-     <tr>
-      <td><center>
+		</div>
+		<div class="card">
        <label for="LA"><big>Gas verbruik: </big></label>
        <br>
        <input type="text" size="10" id="ConsGas" placeholder="cons gas..." readonly> m&sup3
-      </td>
-     </tr>
-    </table>
-  </center>
+		</div>
+    </div>
 </div>
     </div>
    <script>
@@ -101,6 +89,7 @@
     var theUrl = "data/?data" + "&version=" + Math.random() ;
     var xhr = new XMLHttpRequest() ;
     xhr.onreadystatechange = function() {
+      if ( xhr.readyState == XMLHttpRequest.DONE )
      lines = xhr.responseText.split ( " " ) ;
      for ( i = 0 ; i < (lines.length) ; i++ )
      {
