setup page prepared for ESPnow

--- a/data/index.html
+++ b/data/index.html
@@ -28,7 +28,7 @@
     <label>WiFi signaal : </label>
     <input class="Version" type="text" size="4" id="rssi" placeholder="WiFi signaal" readonly>
     <br><br>
-    <div class="card-grid">
+    <div class="data-grid">
 		<div class="card">
        <label for="HA"><big>Energie verbruik tarief 1: </big></label>
        <br>
